# ConfigArcLauncher

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: extract-release-notes.mjs
src/: App.tsx  errors.ts  i18n.ts  main.css  main.tsx
src-tauri/: Cargo.toml  configarc_active_game.json  configarc_games.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/configarc-core/: Cargo.toml  README-PrivExec.md
src-tauri/crates/configarc-core/scripts/: vhd-helper.ps1
src-tauri/crates/configarc-core/src/: lib.rs  privexec.rs  remote.rs  trusted.rs  vhd.rs
src-tauri/crates/configarc-core/src/config/: profiles.rs
src-tauri/crates/configarc-core/tests/: privexec_integration.rs
src-tauri/scripts/: vhd-helper.ps1
src-tauri/src/: commands.rs  error.rs  main.rs  privexec.rs  remote.rs  trusted.rs  vhd.rs
src-tauri/src/config/: mod.rs  paths.rs  profiles.rs  segatools.rs
src-tauri/src/fsdecrypt/: keys.rs  mod.rs
src-tauri/src/games/: launcher.rs  mod.rs  store.rs
src-tauri/src/icf/: crypto.rs  mod.rs  models.rs  parser.rs
src/api/: configApi.ts  deployGamesApi.ts  downloadOrderApi.ts  gamesApi.ts  manageApi.ts  privexecApi.ts  remoteApi.ts  tauriClient.ts  updateApi.ts  vhdApi.ts
src/components/: common.css
src/constants/: storage.ts
src/context/: ExtensionsContext.tsx  ThemeContext.tsx  UpdateContext.tsx
src/extensions/: registry.ts
src/routes/: ConfigEditorPage.tsx  DeployGamesPage.css  DeployGamesPage.tsx  DownloadOrderPage.css  DownloadOrderPage.tsx  ExtensionsPage.css  ExtensionsPage.tsx  GameDeployPage.css  GameDeployPage.tsx  GameListPage.css  GameListPage.tsx  JsonEditorPage.tsx  ManageAimePage.css  ManageAimePage.tsx  (+6 more)
(+37 files in other folders)
