[package]
name = "configarc-launcher"
version = "0.4.5"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
configparser = "1.0.0"
tauri = { version = "=2.9.5", features = [] }
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tempfile = "3.14"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
sha2 = "0.10"
hex = "0.4"
minisign-verify = "0.2.4"
chrono = { version = "0.4", features = ["clock", "serde"] }
anyhow = "1.0.81"
binary-reader = "0.4.5"
cbc = { version = "0.1.2", features = ["std"] }
aes = "0.8.3"
crc32fast = "1.4.0"
hex-literal = "0.4.1"
exfat-fs = "0.1.3"
ntfs = "0.4.0"

[build-dependencies]
tauri-build = { version = "=2.5.3", features = [] }
